Fri Jul 18 15:22:28 2003  Alexandre Oliva  <aoliva@redhat.com>

	* combine.c (combinable_i3pat): Don't forbid occurrences of
	i2dest or i1dest in inner_dest if inner_dest is a mem.

Fri Jul 18 17:05:57 CEST 2003  Jan Hubicka  <jh@suse.cz>

	* cgraph.c (cgraph_remove_node): Clear the hash table slot.

2003-07-17  Jakub Jelinek  <jakub@redhat.com>

	PR target/11087
	* loop.c (basic_induction_var): Check if convert_modes emitted any
	instructions. Remove them and return 0 if so.

2003-07-18  Eric Botcazou  <ebotcazou@libertysurf.fr>

	PR optimization/11083
	* toplev.c (rest_of_handle_addresof): Rename into
	rest_of_handle_addressof.  Delete unreachable blocks
	if dead edges were purged after the addressof pass.

2003-07-18  Neil Booth  <neil@daikokuya.co.uk>

	* Makefile.in, configure, configure.in: Remove handling of
	lang-options.h and options_.h.
	* toplev.c (struct lang_opt, documented_lang_options): Remove.
	(display_help): Don't use documented_lang_options.

2003-07-17  Zack Weinberg  <zack@codesourcery.com>

	* c-decl.c (pushdecl_function_level): Make static, return nothing.
	(kept_level_p): Fold into poplevel.
	(undeclared_variable): Moved here from c-typeck.c.  Export.
	* c-tree.h (KEEP_YES, KEEP_NO, KEEP_MAYBE): New #defines.
	(undeclared_variable): Prototype here.  Don't prototype
	kept_level_p nor pushdecl_function_level.
	* c-parse.in: Change first argument to poplevel from
	"kept_level_p()" to "KEEP_MAYBE".
	* c-typeck.c (undeclared_variable): Moved to c-decl.c.

2003-07-17  Roger Sayle  <roger@eyesopen.com>

	* simplify-rtx.c (simplify_rtx): Use simplify_gen_binary to swap
	commutative operands instead of modifying the RTL in-place.

2003-07-17  Mark Mitchell  <mark@codesourcery.com>

	PR optimization/11557
	* calls.c (flags_from_decl_or_type): Do not set ECF_LIBCALL_BLOCK
	unless we know which function is being called.

2003-07-17  Roger Sayle  <roger@eyesopen.com>

	* cse.c (fold_rtx): Use swap_commutative_operands_p to determine