@@ -1,3 +1,8 @@
+2003-07-18  Richard Henderson  <rth@redhat.com>
+
+	* cfgrtl.c (force_nonfallthru_and_redirect): Use tablejump_p
+	to skip the addr_vec.
+
 Fri Jul 18 15:22:28 2003  Alexandre Oliva  <aoliva@redhat.com>
 
 	* combine.c (combinable_i3pat): Don't forbid occurrences of
